<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="@drawable/bgtmp"
    tools:context=".LoginActivity">


    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/login_name"
        android:hint="@string/login_name"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="80dp"
        android:layout_alignRight="@+id/login_submit"
        android:layout_alignEnd="@+id/login_submit" />

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:hint="@string/login_password"
        android:id="@+id/login_password"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/login_name"
        android:layout_alignParentLeft="true"
        android:layout_toStartOf="@+id/login_submit"
        android:layout_toLeftOf="@+id/login_submit"
        android:layout_alignRight="@+id/login_name"
        android:layout_alignEnd="@+id/login_name" />


    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_submit"
        android:id="@+id/login_submit"
        android:layout_below="@+id/login_password"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/turn_to_register"
        android:id="@+id/turn_to_register"
        android:layout_below="@+id/login_password"
        android:layout_alignParentLeft="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="登录"
        android:textSize="45dp"
        android:textStyle="bold"
        android:layout_marginTop="15dp"
        android:id="@+id/Login_Welcome"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignRight="@+id/login_name"
        android:layout_alignEnd="@+id/login_name" />

</RelativeLayout>
